@@ -8,6 +8,7 @@ v 0.9.1
 - Show last commit message in fedorarpms#show
 - Show last commit date in fedorarpms#show
 - Use api to fetch rawhide version instead of scrapping page
+- Retrieve homepage via Pkgwat
 
 v 0.9.0
 
